// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should render expensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2,323,423.45
  </h1>
</div>
`;
